<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/standard_side_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.sidesheet.SideSheetBehavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txvSliderHeader"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/set_filters"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#000000"
            android:textSize="48sp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvSliderHeader"/>

        <TextView
            android:id="@+id/txvRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_below="@id/divider1"
            android:text="@string/radius"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/txvRadiusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_below="@id/txvSliderHeader"
            android:text="@string/radius"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvRadius"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:stepSize="0.5"
            android:value="1"
            android:valueFrom="0.5"
            android:valueTo="10"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sliRadius"/>

        <TextView
            android:id="@+id/txvSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_below="@id/divider2"
            android:text="@string/sort_by"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <RadioGroup
            android:id="@+id/rgrpSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvSortBy"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin">

            <RadioButton
                android:id="@+id/rbtnDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <RadioButton
                android:id="@+id/rbtnRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating" />

            <RadioButton
                android:id="@+id/rbtnPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <RadioButton
                android:id="@+id/rbtnPopularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popularity" />
        </RadioGroup>

        <Button
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/apply"
            android:layout_toEndOf="@id/btnResetFilter" />

        <Button
            android:id="@+id/btnResetFilter"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/reset" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>